--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,194 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk-UA" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>ХУДОЖНІЙ МУЗЕЙ</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      rel="icon"
+      type="image/png"
+      href="./images/logo.svg"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
+    <script
+      type="text/javascript"
+      src="scripts/main.js"
+      defer>
+    </script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="container grid grid--desktop">
+        <div class="header__image-container grid__item--tablet-4-4 grid__item--desktop-6-6">
+          <img
+            class="header__image"
+            src="./images/NHM.png"
+            alt="Museum Entry"
+          >
+        </div>
+        <div class="header__logo grid__item--tablet-4-5 grid__item--desktop-6-7">
+          <a href="#" class="logo">
+            NA
+            <br>
+            MU
+          </a>
+        </div>
+        <a class="header__burger" href="#menu"></a>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="grid">
+        <div class="grid__item
+          grid__item--mobiles-1-2
+          menu__grid--tablet-1-3
+          menu__grid--cross
+          grid__item--desktop-1-1">
+          <a href="#" class="menu__cross">
+            <img
+            src="./images/cross.svg"
+            alt="cross">
+          </a>
+        </div>
+        <div class="menu__container
+          grid__item--desktop-2-6
+          menu__grid--cross
+          grid__item--tablet-1-3
+          grid__item--mobiles-1-2">
+          <ul class="menu__list flex">
+            <div class="flex_w flex_wq">
+              <li class="menu__item">
+                <a href="#events" class="menu__link">Галерея</a>
+              </li>
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link">Виставки та<br class="menu__br">події</a>
+              </li>
+            </div>
+
+            <div class="flex_w">
+              <li class="menu__item">
+                <a href="#contacts" class="menu__link">Про Нас</a>
+              </li>
+              <li class="menu__item">
+                <a href="#contacts" class="menu__link">Контаки</a>
+              </li>
+            </div>
+          </ul>
+        </div>
+
+        <div class="grid__item
+          grid__item--mobiles-1-2
+          grid__item--tablet-1-3
+          grid__item--desktop-7-7">
+          <div class="menu__line"></div>
+        </div>
+
+        <div class="grid__item
+          grid__item--mobiles-1-2">
+          <div class="menu__line-tel"></div>
+        </div>
+        <div class="grid__item
+          grid__item--mobiles-1-2
+          grid__item--tablet-4-5
+          menu__grid
+          grid__item--desktop-8-9">
+          <div class="contacts__subtitle-nav">
+            Графік роботи
+          </div>
+
+          <div class="contacts__text-nav">
+            <span class="page__bold-text">12:00 — 20:00</span>
+            середа
+            <br>
+            <span class="page__bold-text">12:00 — 20:00</span>
+            четвер
+            <br>
+            <span class="page__bold-text">12:00 — 20:00</span>
+            п’ятниця
+            <br>
+            <span class="page__bold-text">11:00 — 19:00</span>
+            субота
+            <br>
+            <span class="page__bold-text">11:00 — 19:00</span>
+            неділя
+          </div>
+        </div>
+
+        <div class="grid__item
+          grid__item--mobiles-1-2
+          grid__item--tablet-5-6
+          menu__grid
+          grid__item--desktop-10-11">
+          <div class="contacts__text-nav contacts__text-nav-top">
+            <span>Вихідні: </span>понеділок, вівторок
+            <br>
+          Каса припиняє роботу за 1 годину
+          до закриття музею
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main>
+      <section class="museum" id="museum">
+        <div class="container grid grid--desktop">
+          <h1 class="museum__title
+            grid__item--tablet-1-3
+            grid__item--desktop-1-5">
+            ХУДОЖНІЙ
+            <br>
+            МУЗЕЙ
+          </h1>
+        </div>
+
+        <div class="button">
+          <div class="container grid grid--desktop">
+            <div class="grid__item grid__item--tablet-1-3 grid__item--desktop-3-5">
+              <div class="button__container">
+                <div class="button__label">
+                  Квитки
+                </div>
+                <a class="button__link"
+                  href="#"
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="marker">
+          <div class="marker__line">
+          </div>
+          <div class="marker__text">
+            Події
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section events" id="events">
+      </section>
+
+      <section class="page__section gallery" id="gallery">
+      </section>
+
+      <div class="page__section picslider">
+      </div>
+
+      <section class="page__section subscription" id="subscription">
+      </section>
+
+      <section class="page__section contacts" id="contacts">
+      </section>
+    </main>
+
+    <footer class="footer">
+    </footer>
+
+    <button>
+    </button>
   </body>
 </html>
