--- a/src/index.html
+++ b/src/index.html
@@ -45,16 +45,26 @@
         </div>
       </div>
     </header>
-
+    
     <nav class="page__menu menu" id="menu">
       <div class="menu__wrapper">
-        <div class="container">
+        <div class="container container--menu">
           <div class="menu__content">
+            <a
+              href="#"
+              class="
+                menu__cross
+                menu__cross--tab
+                icon
+                icon--cross
+              "></a>
+
             <div class="menu__top">
               <a
                 href="#"
                 class="
                   menu__cross
+                  menu__cross--mobile
                   icon
                   icon--cross
                 "></a>
@@ -401,8 +411,7 @@
 
               <p class="footer__schedule-item schedule__weekend">
                 <span class="schedule__bold">Вихідні:</span> понеділок, вівторок<br>
-                Каса припиняє роботу за 1 годину до<br>
-                закриття музею
+                Каса припиняє роботу за 1 годину<br> до закриття музею
               </p>
             </div>
           </div>
@@ -422,14 +431,14 @@
                   href="https://goo.gl/maps/Nm2Bc6ReNub13YZQ9"
                   class="contacts__link"
                   target="_blank">
-                  вул. М.Грушевського, 6; Київ, 01001
+                  вул. М. Грушевського, 6; Київ, 01001
                 </a>
 
                 <a href="tel:+38 (044) 278-13-57" class="contacts__link">
                   тел. +38 (044) 278-13-57
                 </a>
                 <a href="fax:+38 (044) 278-74-54" class="contacts__link">
-                  факс +38 (044) 278-74-54
+                  факс +38 (044) <span class="contacts__wrapavoid">278-74-54</span>
                 </a>
                 <a href="mailto:info@namu.kiev.ua" class="contacts__link">
                   e-mail: info@namu.kiev.ua
