problem is fixed && new block lecture was added

--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
         </div>
       </section>
 
-      <section class="events">
+      <section class="events" id="events">
         <div class="container">
           <h2 class="events__title">
             Актуальні
@@ -191,6 +191,30 @@
                 
                 виставку «І спогади i мрії».
               </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="lecture">
+          <div class="lecture__image">
+            
+            <div class="lecture__text">
+              <div class="lecture__subtitle">
+
+                <div class="lecture__subtitle--name">
+                  ЛЕКЦІЯ
+                </div>
+
+                <div class="lecture__subtitle--date">
+                  26/08/2019 - 11:00
+                </div>
+              </div>
+
+              <h3 class="lecture__text--title">
+                Від класицизму до
+                <br> 
+                романтизму
+              </h3>
             </div>
           </div>
         </div>
