--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
           <img
             class="header__image"
             src="./images/NHM.png"
-            alt="Museum Entry"
-          >
+            alt="Museum Entry">
+            
         </div>
         <div class="header__logo grid__item--tablet-4-5 grid__item--desktop-6-7">
           <a href="#" class="logo">
@@ -186,6 +186,7 @@
                   src="./images/1.png"
                   alt="event1"
                   class="exhibition__photo">
+
                 </div>
               </div>
 
@@ -225,6 +226,7 @@
                   src="./images/2.png"
                   alt="event2"
                   class="exhibition__photo">
+
                 </div>
               </div>
 
@@ -295,6 +297,7 @@
                     src="./images/4.png"
                     alt="Painting1"
                     class="painting__photo">
+
                   </div>
                 </div>
 
@@ -307,6 +310,7 @@
                     src="./images/paint2.png"
                     alt="Painting2"
                     class="painting__photo">
+
                   </div>
                 </div>
 
@@ -319,6 +323,7 @@
                     src="./images/paint3.png"
                     alt="Painting3"
                     class="painting__photo">
+
                   </div>
                 </div>
 
@@ -331,6 +336,7 @@
                     src="./images/paint4.png"
                     alt="Painting4"
                     class="painting__photo">
+
                   </div>
                 </div>
               </div>
