--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,145 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/faviconNAMU.svg">
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="scripts/main.js" defer></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="page__header header">
+      <div class="header__container">
+        <a href="#menu" class="header__link"></a>
+
+        <div class="header__logo">
+          NA
+          <br>
+          MU
+        </div>
+
+        <div class="header__logo-center"></div>
+      </div>
+      <div class="header__image"></div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="menu__container">
+        <div class="menu__links">
+          <a href="#" class="menu__cross"></a>
+
+          <div class="menu__list-box">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#" class="menu__link">Галерея</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Про Нас</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Виставки та події</a>
+              </li>
+              <li class="menu__item">
+                <a href="#" class="menu__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="menu__schedule schedule">
+          <div>
+            <div class="schedule__title">
+              Графік роботи
+            </div>
+
+            <div class="schedule__container">
+              <div class="schedule__days">
+                <div class="schedule__days--time">
+                  12:00 — 20:00
+                  <br>
+                  12:00 — 20:00
+                  <br>
+                  12:00 — 20:00
+                  <br>
+                  11:00 — 19:00
+                  <br>
+                  11:00 — 19:00
+                </div>
+                <div>
+                  середа
+                  <br>
+                  четвер
+                  <br>
+                  п’ятниця
+                  <br>
+                  субота
+                  <br>
+                  неділя
+                </div>
+              </div>
+              <div class="schedule__text-box">
+                <div class="schedule__text">
+                  <div class="schedule__text--bold">
+                    Вихідні:
+                  </div>
+                  <div>
+                    понеділок, вівторок
+                    <br>
+                  </div>
+                </div>
+                <div class="schedule__text--cash">
+                  Каса припиняє роботу за 1 годину до
+                  <br>
+                  закриття музею
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </nav>
+
+    <main class="page__main">
+      <section class="page__title title">
+        <h1 class="title__text">
+          ХУДОЖНІЙ МУЗЕЙ
+        </h1>
+
+        <div class="title__button">
+          <a href="#" class="title__link-text">КВИТКИ</a>
+
+          <a href="#" class="title__link-arrow">
+            <img
+              src="images/arrow.svg"
+              alt="arrow to right"
+              class="title__link-img"
+            >
+          </a>
+        </div>
+
+        <div class="title__events">
+          <a href="#" class="title__events--line"></a>
+          <a href="#" class="title__events--text">ПОДІЇ</a>
+        </div>
+      </section>
+
+
+
+
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+
+    </main>
   </body>
 </html>
