Solution added header and menu blocks

--- a/src/index.html
+++ b/src/index.html
@@ -18,88 +18,91 @@
   <body class="page__body">
     <header class="page__header header">
       <div class="header__container">
-        <a href="#menu" class="header__link"></a>
-
-        <div class="header__logo">
-          NA
-          <br>
-          MU
+        <div class="header__content">
+          <a href="#menu" class="header__link"></a>
+          <div class="header__logo">
+            NA
+            <br>
+            MU
+          </div>
+          <div class="header__logo-center"></div>
         </div>
-
-        <div class="header__logo-center"></div>
+        <div class="header__image"></div>
       </div>
-      <div class="header__image"></div>
     </header>
 
     <nav class="page__menu menu" id="menu">
-      <div class="menu__container">
-        <div class="menu__links">
-          <a href="#" class="menu__cross"></a>
+      <div class="page__menu-container">
+        <div class="menu__container">
+          <div class="menu__links">
+            <a href="#" class="menu__cross"></a>
 
-          <div class="menu__list-box">
-            <ul class="menu__list">
-              <li class="menu__item">
-                <a href="#" class="menu__link">Галерея</a>
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link">Про Нас</a>
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link">Виставки та події</a>
-              </li>
-              <li class="menu__item">
-                <a href="#" class="menu__link">Контакти</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="menu__schedule schedule">
-          <div>
-            <div class="schedule__title">
-              Графік роботи
+            <div class="menu__list-box">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Галерея</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Про Нас</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Виставки та події</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Контакти</a>
+                </li>
+              </ul>
             </div>
+          </div>
 
-            <div class="schedule__container">
-              <div class="schedule__days">
-                <div class="schedule__days--time">
-                  12:00 — 20:00
-                  <br>
-                  12:00 — 20:00
-                  <br>
-                  12:00 — 20:00
-                  <br>
-                  11:00 — 19:00
-                  <br>
-                  11:00 — 19:00
-                </div>
-                <div>
-                  середа
-                  <br>
-                  четвер
-                  <br>
-                  п’ятниця
-                  <br>
-                  субота
-                  <br>
-                  неділя
-                </div>
+          <div class="menu__schedule schedule">
+            <div>
+              <div class="schedule__title">
+                Графік роботи
               </div>
-              <div class="schedule__text">
-                <div class="schedule__text--bold">
-                  понеділок, вівторок
-                </div>
 
-                <div class="schedule__text--cash">
-                  Каса припиняє роботу за 1 годину до
-                  <br>
-                  закриття музею
+              <div class="schedule__container">
+                <div class="schedule__days">
+                  <div class="schedule__days--time">
+                    12:00 — 20:00
+                    <br>
+                    12:00 — 20:00
+                    <br>
+                    12:00 — 20:00
+                    <br>
+                    11:00 — 19:00
+                    <br>
+                    11:00 — 19:00
+                  </div>
+                  <div>
+                    середа
+                    <br>
+                    четвер
+                    <br>
+                    п’ятниця
+                    <br>
+                    субота
+                    <br>
+                    неділя
+                  </div>
+                </div>
+                <div class="schedule__text">
+                  <div class="schedule__text--bold">
+                    понеділок, вівторок
+                  </div>
+
+                  <div class="schedule__text--cash">
+                    Каса припиняє роботу за 1 годину до
+                    <br>
+                    закриття музею
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+
     </nav>
 
     <main class="page__main">
