swiper doesnt work

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,23 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="./images/logo.svg">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles/main.scss">
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <script>
+      const swiper = new swiper(".swiper", {
+
+        direction: "vertical",
+        loop: true,
+
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+        });
+    </script>
   </head>
   <body class="page__body">
     <header class="header">
@@ -219,6 +234,71 @@
           </div>
         </div>
       </section>
+
+      <section class="gallery">
+        <div class="container">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+
+          <div class="swiper">
+            <div class="swiper__wrapper">
+              <div class="gallery__place--one">
+                <div class="grid">
+                  <div class="grid__item grid__item--desktop-1-4">
+                    <div class="swiper-slide">
+                      <img 
+                        src="./images/photo/woman1_1170.png"
+                        alt="place 1"
+                        class="gallery__image"
+                      >
+                    </div>
+                  </div>
+                  <div class="grid__item grid__item--desktop-5-12">
+                    <div class="swiper-slide">
+                      <img 
+                        src="./images/photo/houses2_1170.png"
+                        alt="place 2"
+                        class="gallery__image"
+                      >
+                    </div>
+                  </div>
+                </div>
+    
+                <div class="gallery__place--two">
+                  <div class="grid">
+                    <div class="grid__item grid__item--desktop-1-8">
+                      <div class="swiper-slide">
+                        <img 
+                          src="./images/photo/park3_1170.png"
+                          alt="place 3"
+                          class="gallery__image"
+                        >
+                      </div>
+                    </div>
+      
+                    <div class="grid__item grid__item--desktop-9-12">
+                      <div class="swiper-slide">
+                        <img 
+                          src="./images/photo/fon4_1170.png"
+                          alt="place 4"
+                          class="gallery__image"
+                        >
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+          </div>
+
+        </div>
+      </section>
+
+      <div class="page__item"></div>
     </main>
   </body>
 </html>
