--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,12 @@
     <header class="page__header header">
       <div class="header__container">
         <div class="header__content">
-          <a href="#menu" class="header__link"></a>
-          <div class="header__logo">
+          <a href="#menu" class="header__open-menu"></a>
+          <a href="#" class="header__logo">
             NA
             <br>
             MU
-          </div>
+          </a>
           <div class="header__logo-center"></div>
         </div>
         <div class="header__image"></div>
@@ -43,10 +43,10 @@
                   <a href="#" class="menu__link">Галерея</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Про Нас</a>
+                  <a href="#about" class="menu__link">Про Нас</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Виставки та події</a>
+                  <a href="#current-events" class="menu__link">Виставки та події</a>
                 </li>
                 <li class="menu__item">
                   <a href="#" class="menu__link">Контакти</a>
@@ -102,11 +102,10 @@
           </div>
         </div>
       </div>
-
     </nav>
 
     <main class="page__main">
-      <section class="page__title title">
+      <section class="page__title title" id="about">
         <h1 class="title__text">
           ХУДОЖНІЙ МУЗЕЙ
         </h1>
@@ -129,14 +128,81 @@
         </div>
       </section>
 
+      <section class="page__actual actual" id="current-events">
+        <div class="actual__container">
+          <h2 class="actual__title">
+            Актуальні події
+          </h2>
 
+          <div class="actual__place place">
+            <div class="place__photo">
+              <img
+                src="images/actual/photo-1.jpg"
+                alt="Place-1"
+                class="place__image"
+              >
+            </div>
 
+            <div class="place__content content">
+              <div class="content__info">
+                <div class="content__info-event">
+                  ВИСТАВКА
+                </div>
+                <div class="content__info-dates">
+                  26.08-29.11.2019
+                </div>
+              </div>
+
+              <div class="content__name">
+                <h3 class="content__name-title">
+                  Йду і повертаюсь
+                </h3>
+                <div class="content__name-square"></div>
+              </div>
+
+              <p class="content__text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="actual__place place">
+            <div class="place__photo">
+              <img
+                src="images/actual/photo-2.jpg"
+                alt="Place-2"
+                class="place__image"
+              >
+            </div>
+
+            <div class="place__content content">
+              <div class="content__info">
+                <div class="content__info-event">
+                  ВИСТАВКА
+                </div>
+                <div class="content__info-dates">
+                  26.08-29.11.2019
+                </div>
+              </div>
+
+              <div class="content__name">
+                <h3 class="content__name-title">
+                  І спогади і мрії
+                </h3>
+                <div class="content__name-square"></div>
+              </div>
+
+              <p class="content__text">
+                Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <section></section>
       <section></section>
       <section></section>
-      <section></section>
-
     </main>
   </body>
 </html>
