--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
     <script type="text/javascript" src="scripts/main.js"></script>
+  </head>
+  <body class="page__body">
+    <header class="header page__header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__icon icon icon--menu"></div>
+
+          <div class="header__block">
+            <div class="header__image">
+              <a class="header__logo"></a>
+            </div>
+          </div>
+
+          <div class="art-museum">
+            <h1 class="art-museum__title">Художній музей</h1>
+
+            <div class="art-museum__button">
+              <p class="art-museum__text">квитки</p>
+
+              <div class="button button--first-type"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
