fix slider scroll

--- a/src/index.html
+++ b/src/index.html
@@ -321,12 +321,15 @@
             class="subscribe__form"
             action="#"
           >
-            <input
-              class="title subscribe__form-input"
-              type="email"
-              placeholder="E-mail"
-              required
-            >
+            <label>
+              <input
+                class="title subscribe__form-input"
+                type="email"
+                placeholder="E-mail"
+                id="inputid"
+                required
+              >
+            </label>
 
             <button class="subscribe__form-button" type="submit"></button>
           </form>
