--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,75 @@
     </div>
 
     <main class="page__main">
-      
+      <section class="events page__events">
+        <h2 class="events__title">Актуальні події</h2>
+
+        <div class="events__block">
+          <img 
+            src="images/gallery/photo1.jpg"
+            alt="Йду і повертаюсь"
+            class="events__image"
+          >
+
+          <div class="events__text">
+            <div class="events__proposition">
+              <p class="events__subtitle">ВИСТАВКА</p>
+
+              <p class="events__date">26.08-29.11.2019</p>
+            </div>
+
+            <h3 class="events__name">Йду і повертаюсь</h3>
+
+            <p class="events__description">
+              Національний Художній Музей України презентує унікальну 
+              частину колекції Градобанку - українське мистецтво другої 
+              половини 1980-1995 років.
+            </p>
+          </div>
+        </div>
+
+        <div class="events__block">
+          <img 
+            src="images/gallery/photo2.jpg"
+            alt="І спогади і мрії"
+            class="events__image"
+          >
+
+          <div class="events__text">
+            <div class="events__proposition">
+              <p class="events__subtitle">ВИСТАВКА</p>
+
+              <p class="events__date">26.08-29.11.2019</p>
+            </div>
+
+            <h3 class="events__name">І спогади і мрії</h3>
+
+            <p class="events__description">
+              Національний художній музей України до 100 річчя від дня 
+              народження видатної української художниці  Тетяни Яблонської 
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="lecture page__lecture">
+        <div class="lecture__block">
+          <div class="lecture__proposition">
+            <p class="lecture__subtitle">ЛЕКЦІЯ</p>
+
+            <p class="lecture__date">26/08/2019 - 11:00</p>
+          </div>
+
+          <h3 class="lecture__name">
+            Від класицизму до романтизму
+          </h3>
+        </div>
+      </section>
+
+      <section class="gallery page__gallery">
+
+      </section>
     </main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
