--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <header class="header page__header">
       <div class="container">
         <div class="header__content">
-          <div class="header__icon icon icon--menu"></div>
+          <a href="#menu" class="header__icon icon icon--menu"></a>
 
           <div class="header__block">
             <div class="header__image">
@@ -31,5 +31,58 @@
         </div>
       </div>
     </header>
+
+    <nav class="menu page__menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <div class="menu__icon">
+              <a href="#" class="icon icon--cross"></a>
+            </div>
+
+            <ul class="navigation">
+              <li class="navigation__item">
+                <a href="#" class="navigation__link">Галерея</a>
+              </li>
+              <li class="navigation__item">
+                <a href="#" class="navigation__link">Про Нас</a>
+              </li>
+              <li class="navigation__item">
+                <a href="#" class="navigation__link">Виставки та події</a>
+              </li>
+              <li class="navigation__item">
+                <a href="#" class="navigation__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+          <div class="menu__line"></div>
+
+          <div class="menu__bottom">
+            <div class="information">
+              <h2 class="information__title">Графік роботи</h2>
+
+              <div class="information__content">
+                <ul class="information__list">
+                  <li class="information__item">середа</li>
+                  <li class="information__item">четвер</li>
+                  <li class="information__item">п'ятниця</li>
+                  <li class="information__item">субота</li>
+                  <li class="information__item">неділя</li>
+                </ul>
+
+                <p class="information__text">
+                  понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+    </nav>
   </body>
 </html>
