--- a/src/index.html
+++ b/src/index.html
@@ -304,14 +304,35 @@
 
           <div class="footer__contact">
             <div class="menu__graph-title">Контакти:</div>
-            <div class="menu__list-content" id="contact">
-              вул. М. Грушевського, 6; Київ, 01001
-              <br>
+            <div class="footer__list-content" id="contact">
+              <a
+                target="_blank"
+                href="https://goo.gl/maps/h195F7JgSmJmtKgL9"
+                class="footer__link"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <a
+                target="_blank"
+                href="tel:+38 (044) 278-13-57"
+                class="footer__link"
+              >
               тел. +38 (044) 278-13-57
-              <br>
-              факс +38 (044) 278-74-54
-              <br>
-              e-mail: info@namu.kyiv.ua
+              </a>
+              <a
+                target="_blank"
+                href="fax:+38 (044) 278-74-54"
+                class="footer__link"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+              <a
+                target="_blank"
+                href="mailto:info@namu.kyiv.ua"
+                class="footer__link"
+              >
+                e-mail: info@namu.kyiv.ua
+              </a>
             </div>
           </div>
 
