--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,610 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk-UA" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>ХУДОЖНІЙ МУЗЕЙ</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      rel="icon"
+      type="image/png"
+      href="./images/logo.svg"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
+    <script
+      type="text/javascript"
+      src="scripts/main.js"
+      defer>
+    </script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="container grid grid--desktop">
+        <div class="header__image-container grid__item--tablet-4-4 grid__item--desktop-6-6">
+          <img
+            class="header__image"
+            src="./images/NHM.png"
+            alt="Museum Entry">
+
+        </div>
+        <div class="header__logo grid__item--tablet-4-5 grid__item--desktop-6-7">
+          <a href="#" class="logo">
+            NA
+            <br>
+            MU
+          </a>
+        </div>
+        <a class="header__burger" href="#menu"></a>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="grid">
+        <div class="grid__item
+          grid__item--mobiles-1-2
+          menu__grid--tablet-1-3
+          menu__grid--cross
+          grid__item--desktop-1-1">
+          <a href="#" class="menu__cross">
+            <img
+            src="./images/cross.svg"
+            alt="cross">
+          </a>
+        </div>
+        <div class="menu__container
+          grid__item--desktop-2-6
+          menu__grid--cross
+          grid__item--tablet-1-3
+          grid__item--mobiles-1-2">
+          <ul class="menu__list flex">
+            <div class="flex_w flex_wq">
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link">Галерея</a>
+              </li>
+              <li class="menu__item">
+                <a href="#events" class="menu__link">Виставки та<br class="menu__br">події</a>
+              </li>
+            </div>
+
+            <div class="flex_w">
+              <li class="menu__item">
+                <a href="#contacts" class="menu__link">Про Нас</a>
+              </li>
+              <li class="menu__item">
+                <a href="#contacts" class="menu__link">Контаки</a>
+              </li>
+            </div>
+          </ul>
+        </div>
+
+        <div class="grid__item
+          grid__item--mobiles-1-2
+          grid__item--tablet-1-3
+          grid__item--desktop-7-7">
+          <div class="menu__line"></div>
+        </div>
+
+        <div class="grid__item
+          grid__item--mobiles-1-2">
+          <div class="menu__line-tel"></div>
+        </div>
+        <div class="grid__item
+          grid__item--mobiles-1-2
+          grid__item--tablet-4-5
+          menu__grid
+          grid__item--desktop-8-9">
+          <div class="contacts__subtitle-nav">
+            Графік роботи
+          </div>
+
+          <div class="contacts__text-nav">
+            <span class="page__bold-text">12:00 — 20:00</span>
+            середа
+            <br>
+            <span class="page__bold-text">12:00 — 20:00</span>
+            четвер
+            <br>
+            <span class="page__bold-text">12:00 — 20:00</span>
+            п’ятниця
+            <br>
+            <span class="page__bold-text">11:00 — 19:00</span>
+            субота
+            <br>
+            <span class="page__bold-text">11:00 — 19:00</span>
+            неділя
+          </div>
+        </div>
+
+        <div class="grid__item
+          grid__item--mobiles-1-2
+          grid__item--tablet-5-6
+          menu__grid
+          grid__item--desktop-10-11">
+          <div class="contacts__text-nav contacts__text-nav-top">
+            <span>Вихідні: </span>понеділок, вівторок
+            <br>
+          Каса припиняє роботу за 1 годину
+          до закриття музею
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main>
+      <section class="museum" id="museum">
+        <div class="container grid grid--desktop">
+          <h1 class="museum__title
+            grid__item--tablet-1-3
+            grid__item--desktop-1-5">
+            ХУДОЖНІЙ
+            <br>
+            МУЗЕЙ
+          </h1>
+        </div>
+
+        <div class="button">
+          <div class="container grid grid--desktop">
+            <div class="grid__item grid__item--tablet-1-3 grid__item--desktop-3-5">
+              <div class="button__container">
+                <div class="button__label">
+                  Квитки
+                </div>
+                <a class="button__link"
+                  href="#"
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="marker">
+          <div class="marker__line">
+          </div>
+          <div class="marker__text">
+            Події
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section events" id="events">
+        <div class="container">
+          <h2 class="page__section-title">
+            Актуальні події
+          </h2>
+
+          <div class="events__exhibition exhibition">
+            <div class="grid">
+              <div class="grid__item
+                grid__item--mobile-1-2
+                grid__item--tablet-1-6
+                grid__item--desktop-1-7">
+                <div class="exhibition__photo-container">
+                  <img
+                  src="./images/1.png"
+                  alt="event1"
+                  class="exhibition__photo">
+
+                </div>
+              </div>
+
+              <div class="grid__item
+                grid__item--mobile-1-2
+                grid__item--tablet-1-6
+                grid__item--desktop-9-11">
+                <div class="exhibition__photo-container">
+                  <div class="events__tags">
+                    <div class="events__type">
+                      Виставка
+                    </div>
+                    <div class="events__date">
+                      26.08-29.11.2021
+                    </div>
+                  </div>
+                  <div class="events__title">
+                    Йду і повертаюсь
+                  </div>
+                  <div class="events__text">
+                    Національний Художній Музей України презентує унікальну частину колекції
+                    Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="events__exhibition exhibition">
+            <div class="grid">
+              <div class="grid__item
+                grid__item--mobile-1-2
+                grid__item--tablet-1-6
+                grid__item--desktop-1-7">
+                <div class="exhibition__photo-container">
+                  <img
+                  src="./images/2.png"
+                  alt="event2"
+                  class="exhibition__photo">
+
+                </div>
+              </div>
+
+              <div class="grid__item
+                grid__item--mobile-1-2
+                grid__item--tablet-1-6
+                grid__item--desktop-9-11">
+                <div class="exhibition__photo-container">
+                  <div class="events__tags">
+                    <div class="events__type">
+                      Виставка
+                    </div>
+                    <div class="events__date">
+                      30.11-23.02.2022
+                    </div>
+                  </div>
+                  <div class="events__title">
+                    І спогади і мрії
+                  </div>
+                  <div class="events__text">
+                    Національний художній музей України до 100 річчя від дня народження   видатної української художниці
+                    Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="events__lecture lecture">
+        <div class="lecture__photo-container">
+          <img
+          src="./images/3.png"
+          alt="event3"
+          class="lecture__photo">
+        </div>
+        <div class="lecture__description">
+          <div class="events__tags">
+            <div class="events__type lecture__type">
+              Лекція
+            </div>
+            <div class="lecture__date">
+              26.08.2021 - 11:00
+            </div>
+          </div>
+          <div class="lecture__title">
+            Від класицизму до романтизму
+          </div>
+        </div>
+      </div>
+
+      <section class="page__section gallery" id="gallery">
+        <div class="container">
+          <h2 class="page__section-title">
+            Галерея
+          </h2>
+
+          <div class="gallery__painting painting">
+            <div class="painting__photos">
+              <div class="grid">
+                <div class="grid__item
+                  grid__item--mobile-1-2
+                  grid__item--tablet-1-3
+                  grid__item--desktop-1-4">
+                  <div class="painting__photo-container">
+                    <img
+                    src="./images/4.png"
+                    alt="Painting1"
+                    class="painting__photo">
+
+                  </div>
+                </div>
+
+                <div class="grid__item
+                  grid__item--mobile-1-2
+                  grid__item--tablet-4-6
+                  grid__item--desktop-5-12">
+                  <div class="painting__photo-container">
+                    <img
+                    src="./images/paint2.png"
+                    alt="Painting2"
+                    class="painting__photo">
+
+                  </div>
+                </div>
+
+                <div class="grid__item
+                  grid__item--mobile-1-2
+                  grid__item--tablet-1-3
+                  grid__item--desktop-1-8">
+                  <div class="painting__photo-container painting__photo-container--small">
+                    <img
+                    src="./images/paint3.png"
+                    alt="Painting3"
+                    class="painting__photo">
+
+                  </div>
+                </div>
+
+                <div class="grid__item
+                  grid__item--mobile-1-2
+                  grid__item--tablet-4-6
+                  grid__item--desktop-9-12">
+                  <div class="painting__photo-container painting__photo-container--small">
+                    <img
+                    src="./images/paint4.png"
+                    alt="Painting4"
+                    class="painting__photo">
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </section>
+
+      <div class="page__section picslider">
+        <div class="picslider__wrapper">
+          <input
+            type="radio"
+            name="point"
+            id="slide1"
+            checked>
+          <input
+            type="radio"
+            name="point"
+            id="slide2">
+          <input
+            type="radio"
+            name="point"
+            id="slide3">
+          <input
+            type="radio"
+            name="point"
+            id="slide4">
+
+          <div class="picslider__slider">
+            <div class="picslider__slides picslider__slide1"></div>
+            <div class="picslider__slides picslider__slide2"></div>
+            <div class="picslider__slides picslider__slide3"></div>
+            <div class="picslider__slides picslider__slide4"></div>
+          </div>
+          <div class="picslider__controls">
+            <label for="slide1"></label>
+            <label for="slide2"></label>
+            <label for="slide3"></label>
+            <label for="slide4"></label>
+          </div>
+        </div>
+      </div>
+
+      <section class="page__section subscription" id="subscription">
+        <div class="subscription__container">
+          <img
+            src="./images/6.png"
+            alt="subscription"
+            class="subscription__image">
+
+          <div class="subscription__block container">
+            <div class="grid">
+              <div class="grid__item
+                grid__item--mobile-1-2
+                grid__item--tablet-2-5
+                grid__item--desktop-4-9">
+
+                <div class="subscription__title">
+                  Підписка
+                </div>
+
+                <div class="subscription__text">
+                  Бути в курсі всіх актуальних подій та останніх новин.
+                </div>
+
+                <form action="#" class="form">
+                  <div class="subscription__form-container">
+                    <input
+                      name="email"
+                      type="email"
+                      placeholder="E-mail"
+                      class="subscription__field form-field contact-us__form"
+                      required>
+
+                    <button class="subscription__button"></button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section contacts" id="contacts">
+        <div class="container container--mob">
+          <div class="grid">
+            <div class="grid__item
+              grid__item--mobiles-1-2
+              grid__item--tablet-1-1
+              grid__item--desktop-1-1">
+
+              <div class="contacts__logos-container">
+                <div class="contacts__logo">
+                  <a
+                    class="logo">
+                    NA
+                    <br>
+                    MU
+                  </a>
+                </div>
+
+                <div class="contacts__social-logos">
+                  <a
+                    target="_blank"
+                    href="https://www.facebook.com/namu.museum/"
+                    class="contacts__social-logo-facebook">
+                    <img
+                      src="./images/Facebook-logo.png"
+                      alt="Facebook logo"
+                      class="logo__hover">
+                  </a>
+
+                  <a
+                    target="_blank"
+                    href="https://www.instagram.com/namu.museum/"
+                    class="contacts__social-logo-facebook">
+                    <img
+                      src="./images/Instagram-logo.png"
+                      alt="Instagram logo"
+                      class="logo__hover">
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="grid__item
+              grid__item--mobiles-1-1
+              grid__item--tablet-2-3
+              grid__item--desktop-3-4">
+
+              <div class="contacts__subtitle">
+                Графік роботи
+              </div>
+
+              <div class="contacts__text">
+                <span class="page__bold-text">12:00 — 20:00</span>
+                середа
+                <br>
+                <span class="page__bold-text">12:00 — 20:00</span>
+                четвер
+                <br>
+                <span class="page__bold-text">12:00 — 20:00</span>
+                п’ятниця
+                <br>
+                <span class="page__bold-text">11:00 — 19:00</span>
+                субота
+                <br>
+                <span class="page__bold-text">11:00 — 19:00</span>
+                неділя
+                <br>
+                <br>
+                <span class="page__bold-text">Вихідні: </span>понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </div>
+            </div>
+
+            <div class="grid__item
+              grid__item--mobiles-2-2
+              grid__item--tablet-4-5
+              grid__item--desktop-5-6">
+
+              <div class="contacts__subtitle">
+                Контакти:
+              </div>
+
+              <div class="contacts__text">
+                <a
+                  target="_blank"
+                  href="https://goo.gl/maps/LASFYeWXAo6UVAEh9"
+                  class="contacts__text--email">
+
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <br>
+                <a
+                  href="tel:+38(044)278-13-57"
+                  class="contacts__text--tel">
+
+                  факс +38 (044) 278-13-57
+                </a>
+                <br>
+                <a
+                  href="tel:+38(044)278-74-54"
+                  class="contacts__text--tel">
+
+                  факс +38 (044) 278-74-54
+                </a>
+                <br>
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="contacts__text--email">
+
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </div>
+            </div>
+
+            <div class="contacts__arrow">
+              <a href="#" class="contacts__arrow-size">
+                <img
+                  class="contacts__arrow-image"
+                  src="./images/Arrow up.png"
+                  alt="arrow">
+              </a>
+            </div>
+
+            <div class="grid__item
+              grid__item--mobiles-1-2
+              grid__item--tablet-2-5
+              grid__item--desktop-7-7">
+              <div class="contacts__border-line"></div>
+            </div>
+
+            <div class="grid__item
+              grid__item--mobiles-1-1
+              grid__item--tablet-2-3
+              grid__item--desktop-8-9">
+
+              <ul class="contacts__nav">
+                <li class="contacts__nav-item">
+                  <a href="#gallery" class="contacts__nav-link">Галерея</a>
+                </li>
+
+                <li class="contacts__nav-item">
+                  <a href="#events" class="contacts__nav-link">Виставки та події</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="grid__item
+              grid__item--mobiles-2-2
+              grid__item--tablet-4-5
+              grid__item--desktop-10-11">
+
+              <ul class="contacts__nav">
+                <li class="contacts__nav-item">
+                  <a href="#" class="contacts__nav-link">Про Нас</a>
+                </li>
+
+                <li class="contacts__nav-item">
+                  <a href="#contacts" class="contacts__nav-link">Контаки</a>
+                </li>
+              </ul>
+
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container container--mob">
+        <div class="footer__block">
+          <div class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+
+          <div class="footer__authors">
+            Designed by Zhyriada Marina
+            <br>
+            Layout by Paul Voronin
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
