--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,10 @@
   </head>
   <body class="page__body">
     <header class="header">
-      <div class="page__container">
+      <div class="page__container-image">
         <div class="header__image"></div>
-        
+      </div>
+      <div class="page__container">
         <div class="grid grid__header">
           <div class="header__top grid__item--1-6--tablet grid__item--1-12--desktop">
             <div class="grid__item">
