Solution added all blocks

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             <div class="menu__list-box">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Галерея</a>
+                  <a href="#gallery" class="menu__link">Галерея</a>
                 </li>
                 <li class="menu__item">
                   <a href="#about" class="menu__link">Про Нас</a>
@@ -49,7 +49,7 @@
                   <a href="#current-events" class="menu__link">Виставки та події</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Контакти</a>
+                  <a href="#contacts" class="menu__link">Контакти</a>
                 </li>
               </ul>
             </div>
@@ -123,8 +123,8 @@
         </div>
 
         <div class="title__events">
-          <a href="#" class="title__events--line"></a>
-          <a href="#" class="title__events--text">ПОДІЇ</a>
+          <a href="#current-events" class="title__events--line"></a>
+          <a href="#current-events" class="title__events--text">ПОДІЇ</a>
         </div>
       </section>
 
@@ -200,9 +200,210 @@
         </div>
       </section>
 
-      <section></section>
-      <section></section>
-      <section></section>
+      <section class="page__lecture lecture">
+        <div class="lecture__photo">
+          <img
+            src="images/actual/lecture.jpg"
+            alt="image"
+            class="lecture__image"
+          >
+        </div>
+
+        <div class="lecture__content">
+          <div class="lecture__info">
+            <div class="lecture__info-name">ЛЕКЦІЯ</div>
+            <div class="lecture__info-date">26/08/2019 - 11:00</div>
+          </div>
+          <h3 class="lecture__title">
+            Від класицизму до
+            <br>
+            романтизму
+          </h3>
+        </div>
+      </section>
+
+      <section class="page__gallery" id="gallery">
+        <div class="gallery__container">
+          <h2 class="gallery__title">Галерея</h2>
+
+          <div class="gallery__photos">
+            <div class="gallery__photo gallery__photo--1">
+              <img
+                src="images/gallery/gallery-1.jpg"
+                alt="Image-1"
+                class="gallery__image"
+              >
+            </div>
+
+            <div class="gallery__photo gallery__photo--2">
+              <img
+                src="images/gallery/gallery-2.jpg"
+                alt="Image-2"
+                class="gallery__image"
+              >
+            </div>
+
+            <div class="gallery__photo gallery__photo--3">
+              <img
+                src="images/gallery/gallery-3.jpg"
+                alt="Image-3"
+                class="gallery__image"
+              >
+            </div>
+
+            <div class="gallery__photo gallery__photo--4">
+              <img
+                src="images/gallery/gallery-4.jpg"
+                alt="Image-4"
+                class="gallery__image"
+              >
+            </div>
+          </div>
+
+          <div class="gallery__slider slider">
+            <div class="slider__mark slider__mark--1"></div>
+            <div class="slider__mark slider__mark--2"></div>
+            <div class="slider__mark slider__mark--3"></div>
+            <div class="slider__mark slider__mark--4"></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__subscription subscription">
+        <div class="subscription__content">
+          <h2 class="subscription__title">Підписка</h2>
+          <p class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form action="#" class="form">
+
+            <input
+              type="text"
+              name="email"
+              class="form__email"
+              placeholder="E-mail"
+              required
+            >
+            <button class="form__button">
+              <img
+                src="images/arrow-black.svg"
+                alt="button arrow"
+                class="form__button-arrow"
+              >
+            </button>
+          </form>
+        </div>
+      </section>
+
+      <section class="page__contacts contacts" id="contacts">
+        <div class="contacts__container">
+          <div class="contacts__icons">
+            <a href="#" class="contacts__icons-logo">
+              NA
+              <br>
+              MU
+            </a>
+            <div class="contacts__icons-social">
+              <a
+                href="https://facebook.com"
+                class="contacts__icons-icon"
+                target="_blank"
+              >
+                <img
+                  src="images/fb-logo.svg"
+                  alt="facebook logo"
+                  class="contacts__icons-image"
+                >
+              </a>
+              <a
+                href="https://www.instagram.com"
+                class="contacts__icons-icon"
+                target="_blank"
+              >
+                <img
+                  src="images/insta-logo.svg"
+                  alt="instagram logo"
+                  class="contacts__icons-image"
+                >
+              </a>
+            </div>
+          </div>
+          <div class="contacts__schedule">
+            <p class="contacts__title contacts__text">Графік роботи</p>
+            <div class="contacts__schedule-time">
+              <p class="contacts__time">12:00 — 20:00</p>
+              <p class="contacts__text">середа</p>
+              <p class="contacts__time">12:00 — 20:00</p>
+              <p class="contacts__text">четвер</p>
+              <p class="contacts__time">12:00 — 20:00</p>
+              <p class="contacts__text">п’ятниця</p>
+              <p class="contacts__time">11:00 — 19:00</p>
+              <p class="contacts__text">субота</p>
+              <p class="contacts__time">11:00 — 19:00</p>
+              <p class="contacts__text">неділя</p>
+            </div>
+            <p class="contacts__text">
+              <br>
+              <strong>Вихідні:</strong> понеділок, вівторок.
+              <br>
+              Каса припиняє роботу за 1 годину
+              <br>
+              до закриття музею.
+            </p>
+          </div>
+          <div class="contacts__address">
+            <p class="contacts__title contacts__text">Контакти:</p>
+            <p class="contacts__text">
+              вул. М. Грушевського, 6;
+              <br>
+              Київ, 01001
+              <br>
+              тел. +38 (044) 278-13-57
+              <br>
+              факс +38 (044) 278-74-54
+              <br>
+              e-mail: info@namu.kiev.ua
+            </p>
+            <a href="#" class="contacts__home">
+              <img
+                src="images/arrow-top.svg"
+                alt="arrow to home"
+                class="contacts__arrow"
+              >
+            </a>
+          </div>
+
+          <div class="contacts__line"></div>
+
+          <div class="contacts__link contacts__link--left">
+            <a href="#gallery" class="contacts__text">
+              Галерея
+            </a>
+            <a href="#current-events" class="contacts__text">
+              Виставки та події
+            </a>
+          </div>
+
+          <div class="contacts__link contacts__link--right">
+            <a href="#about" class="contacts__text">
+              Про Нас
+            </a>
+            <a href="#contacts" class="contacts__text">
+              Контакти
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="page__footer footer">
+      <div class="footer__container">
+        <div class="footer__text footer__text--order">
+          Designed by Zhyriada Marina
+        </div>
+        <div class="footer__text">
+          Copyright © 2019. All Rights Reserved.
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
