--- a/src/index.html
+++ b/src/index.html
@@ -84,5 +84,67 @@
 
       </div>
     </nav>
+
+    <div class="page__section" id="events">
+      <div class="container">
+        <h2 class="page__section-title">Актуальні події</h2>
+
+        <div class="events events--gap">
+          <div class="grid grid--phone">
+            <div class="grid__item grid__item--tablet-1-6 grid__item--desktop-1-7">
+              <div class="events__photo">
+                <img
+                  src="./images/photos/landscape.png"
+                  alt="landscape"
+                  class="events__image"
+                >
+              </div>
+            </div>
+
+            <div class="grid__item grid__item--tablet-1-4 grid__item--desktop-9-12">
+              <div class="events__description">
+                <div class="events__data">Виставка</div>
+
+                <div class="events__title">
+                  Йду і повертаюсь
+                </div>
+
+                <div class="events__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="events">
+          <div class="grid grid--phone">
+            <div class="grid__item grid__item--tablet-1-6 grid__item--desktop-1-7">
+              <div class="events__photo">
+                <img
+                  src="./images/photos/girl.png"
+                  alt="girl"
+                  class="events__image"
+                >
+              </div>
+            </div>
+
+            <div class="grid__item grid__item--tablet-1-4 grid__item--desktop-9-12">
+              <div class="events__description">
+                <div class="events__data">Виставка</div>
+
+                <div class="events__title">
+                  І спогади і мрії
+                </div>
+
+                <div class="events__text">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
