--- a/src/index.html
+++ b/src/index.html
@@ -431,6 +431,7 @@
               <div class="contacts__logos-container">
                 <div class="contacts__logo">
                   <a
+                    href="#"
                     class="logo">
                     NA
                     <br>
