--- a/src/index.html
+++ b/src/index.html
@@ -111,9 +111,9 @@
         </h1>
 
         <div class="title__button">
-          <a href="#" class="title__link-text">КВИТКИ</a>
+          <a href="#current-events" class="title__link-text">КВИТКИ</a>
 
-          <a href="#" class="title__link-arrow">
+          <a href="#current-events" class="title__link-arrow">
             <img
               src="images/arrow.svg"
               alt="arrow to right"
