--- a/src/index.html
+++ b/src/index.html
@@ -353,17 +353,38 @@
           </div>
           <div class="contacts__address">
             <p class="contacts__title contacts__text">Контакти:</p>
-            <p class="contacts__text">
+
+            <a
+              href="https://goo.gl/maps/MjhA9znU5da1cLaCA"
+              class="contacts__text contacts__text--hover"
+              target="_blank"
+            >
               вул. М. Грушевського, 6;
               <br>
               Київ, 01001
-              <br>
+            </a>
+
+            <a
+              href="tel:+38 (044) 278-13-57"
+              class="contacts__text contacts__text--hover"
+            >
               тел. +38 (044) 278-13-57
-              <br>
+            </a>
+
+            <a
+              href="tel:+38 (044) 278-74-54"
+              class="contacts__text contacts__text--hover"
+            >
               факс +38 (044) 278-74-54
-              <br>
+            </a>
+
+            <a
+              href="mailto:info@namu.kiev.ua"
+              class="contacts__text contacts__text--hover"
+            >
               e-mail: info@namu.kiev.ua
-            </p>
+            </a>
+
             <a href="#" class="contacts__home">
               <img
                 src="images/arrow-top.svg"
@@ -376,19 +397,19 @@
           <div class="contacts__line"></div>
 
           <div class="contacts__link contacts__link--left">
-            <a href="#gallery" class="contacts__text">
+            <a href="#gallery" class="contacts__text contacts__text--hover">
               Галерея
             </a>
-            <a href="#current-events" class="contacts__text">
+            <a href="#current-events" class="contacts__text contacts__text--hover">
               Виставки та події
             </a>
           </div>
 
           <div class="contacts__link contacts__link--right">
-            <a href="#about" class="contacts__text">
+            <a href="#about" class="contacts__text contacts__text--hover">
               Про Нас
             </a>
-            <a href="#contacts" class="contacts__text">
+            <a href="#contacts" class="contacts__text contacts__text--hover">
               Контакти
             </a>
           </div>
