--- a/src/index.html
+++ b/src/index.html
@@ -370,7 +370,7 @@
               class="contacts__text contacts__text--hover"
               target="_blank"
             >
-              вул. М. Грушевського, 6;
+              вул. М. Грушевського, 6
               <br>
               Київ, 01001
             </a>
