--- a/src/index.html
+++ b/src/index.html
@@ -301,7 +301,82 @@
           </div>
         </div>
       </section>
+
+      <section class="subscription">
+        <div class="subscription__text">
+          <h2 class="subscription__title">Підписка</h2>
+
+          <p class="subscription__description">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+        </div>
+
+        <form
+          action="https://google.com"
+          class="subscription__form"
+          target="_blank"
+          method="post"
+        >
+          <div class="subscription__email">
+            <label for="email"></label>
+            <input
+              id="email"
+              name="email"
+              type="email"
+              class="subscription__input"
+              placeholder="example@gmail.com"
+              required
+            >
+          </div>
+
+          <button class="subscription__button" type="submit">
+            <div class="subscription__square">
+              <img
+                src="images/icons/black-arrow.svg"
+                alt="Tickets"
+                class="subscription__arrow"
+              >
+            </div>
+          </button>
+        </form>
+      </section>
     </main>
+
+    <footer class="footer page__footer">
+      <div class="footer__top">
+        <a href="#" class="footer__logo">
+          NA
+          <br>
+          MU
+        </a>
+
+        <div class="footer__socials">
+          <a
+            href="https://www.facebook.com/namu.museum/"
+            class="footer__icon footer__icon--facebook"
+            target="_blank"
+          ></a>
+
+          <a
+            href="https://www.instagram.com/namu.museum/"
+            class="footer__icon footer__icon--instagram"
+            target="_blank"
+          ></a>
+        </div>
+      </div>
+
+      <div class="footer__middle">
+
+      </div>
+
+      <div class="footer__nav">
+
+      </div>
+
+      <div class="footer__copyright">
+
+      </div>
+    </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
