--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="page__body">
     <header class="header page__header">
-      <div class="container">
+      <div class="container header__container">
         <div class="header__content">
           <a href="#menu" class="header__icon icon icon--menu"></a>
 
@@ -26,6 +26,12 @@
               <p class="art-museum__text">квитки</p>
 
               <div class="button button--first-type"></div>
+            </div>
+
+            <div class="art-museum__detail">
+              <div class="art-museum__line"></div>
+
+              <p class="art-museum__detail-text">Події</p>
             </div>
           </div>
         </div>
@@ -144,6 +150,18 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="classic-roman page__section">
+      <div class="classic-roman__photo"></div>
+
+      <div class="classic-roman__information">
+        <div class="classic-roman__date">Лекція</div>
+
+        <h2 class="classic-roman__title">
+          Від класицизму до романтизму
+        </h2>
       </div>
     </div>
   </body>
